feat: améliore detection et compte rendu des doublons + FilesComparator